# Nitrix

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
src/nitrix/: __main__.py  app.py  client.py  utils.py
src/nitrix/screens/: __init__.py
src/nitrix/screens/login/: screen.py  style.tcss
src/nitrix/screens/main/: screen.py  style.tcss
src/nitrix/screens/main/components/: __init__.py  message_box.py  messages.py  room_browser.py
src/nitrix/screens/popup/: screen.py  style.tcss
